Add: pic of seed-picking-unit

--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -33,6 +33,44 @@ block.endfield-industry-lib-fitting-unit.description=
 block.endfield-industry-lib-moulding-unit.name=塑形机
 block.endfield-industry-lib-moulding-unit.description=
 
+# 合成制造
+block.endfield-industry-lib-gearing-unit.name=装备原件机
+block.endfield-industry-lib-gearing-unit.description=
+
+block.endfield-industry-lib-filling-unit.name=灌装机
+block.endfield-industry-lib-filling-unit.description=
+
+block.endfield-industry-lib-packaging-unit.name=封装机
+block.endfield-industry-lib-packaging-unit.description=
+
+block.endfield-industry-lib-grinding-unit.name=研磨机
+block.endfield-industry-lib-grinding-unit.description=
+
+block.endfield-industry-lib-separating-unit.name=拆解机
+block.endfield-industry-lib-separating-unit.description=
+
+block.endfield-industry-lib-reactor-crucible.name=反应池
+block.endfield-industry-lib-reactor-crucible.description=
+
+block.endfield-industry-lib-forge-of-the-sky.name=天有洪炉
+block.endfield-industry-lib-forge-of-the-sky.description=
+
+# 电力供应
+block.endfield-industry-lib-relay-tower.name=中继器
+block.endfield-industry-lib-relay-tower.description=
+
+block.endfield-industry-lib-electric-pylon.name=供电桩
+block.endfield-industry-lib-electric-pylon.description=
+
+block.endfield-industry-lib-thermal-bank.name=热能池
+block.endfield-industry-lib-thermal-bank.description=
+
+block.endfield-industry-lib-xiranite-relay.name=息壤中继器
+block.endfield-industry-lib-xiranite-relay.description=
+
+block.endfield-industry-lib-xiranite-pylon.name=息壤供电桩
+block.endfield-industry-lib-xiranite-pylon.description=
+
 # 植物
 item.endfield-industry-lib-wood.name = 原木
 item.endfield-industry-lib-wood.description = 在野外可采集的普通木材，可用于其他材料合成。[gray]总之，先砍树吧。
